# adfilter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  build-report.json  cliff.toml  docker-compose.yml  index.html  manifest.json  pyproject.toml  setup.sh  singbox.json.about.txt
.github/: dependabot.yml
.github/workflows/: auto-update.yml  ci.yml  release.yml  security.yml  source-review.yml
charts/adfilter/: Chart.yaml  values.yaml
charts/adfilter/templates/: configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
community/sources/: TEMPLATE.yaml
config/: application-example.yaml  application.yaml  protected_domains.txt  schema.json
docs/: architecture.md  configuration.md  contributing.md  deployment.md  efficiency-metrics.md  formats.md  plugin-development.md
rule/: clash.yaml  dns.txt  dnsmasq.conf  easylist.txt  hosts.txt  smartdns.conf
scripts/: generate_schema.py
src/adfilter/: __init__.py  __main__.py  bench.py  build_guard.py  category.py  config.py  constants.py  dns_prober.py  i18n.py  logging_setup.py  model.py  optimizer.py  parser.py  regex_patterns.py  security.py  stats.py  tenant.py  trie.py  util.py  writer.py
src/adfilter/cli/: __init__.py  bench.py  convert.py  diff.py  info.py  playground.py  run.py  serve.py  sources.py
src/adfilter/data/: __init__.py  source_catalog.yaml
src/adfilter/data/presets/: cn.yaml  global.yaml  jp.yaml
src/adfilter/fetcher/: __init__.py  base.py  factory.py  http.py  local.py
src/adfilter/handler/: __init__.py  base.py  clash_handler.py  dns_handler.py  dnsmasq_handler.py  easylist_handler.py  hosts_handler.py  loon_handler.py  mikrotik_handler.py  quantumult_handler.py  singbox_handler.py  smartdns_handler.py  surge_handler.py  unbound_handler.py
src/adfilter/notifier/: __init__.py  base.py  discord.py  telegram.py  wecom.py
src/adfilter/quality/: __init__.py  conflict_detector.py  dead_domain_detector.py  efficiency.py  false_positive_analyzer.py  rule_scorer.py  source_scorer.py
src/adfilter/security/: __init__.py  audit.py
src/adfilter/web/: __init__.py  app.py  custom_subscription.py  pages_generator.py
src/adfilter/web/templates/: base.html  dashboard.html  search.html
tests/: conftest.py
tests/fixtures/: sample_clash.yaml  sample_dnsmasq.conf  sample_easylist.txt  sample_hosts.txt
tests/integration/: test_cli.py  test_sources_init.py
tests/unit/: test_allowlist.py  test_audit.py  test_build_guard.py  test_category.py  test_config.py  test_data_init.py  test_dns_prober.py  test_efficiency.py  test_groups.py  test_http_fetcher.py  test_i18n.py  test_logging_setup.py  test_model.py  test_notifier.py  test_optimizer.py  test_optimizer_allowlist.py  test_parser.py  test_playground.py  test_plugin_system.py  test_security.py  test_source_scorer.py  test_tenant.py  test_trie.py  test_util.py  test_writer.py
tests/unit/handler/: test_clash.py  test_dns.py  test_dnsmasq.py  test_easylist.py  test_hosts.py  test_loon.py  test_mikrotik.py  test_quantumult.py  test_singbox.py  test_smartdns.py  test_surge.py  test_unbound.py
tests/unit/quality/: __init__.py  test_conflict_detector.py  test_dead_domain.py  test_false_positive.py  test_rule_scorer.py
