[project]
name = "adfilter"
version = "0.1.0"
description = "Ad filter rule aggregator & converter (Python port of Lknife-Ad-Filter)"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Lknife666" }]
dependencies = [
    "aiohttp>=3.10",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.9",
    "mmh3>=5.0",
    "aiodns>=3.2",
]

[project.scripts]
adfilter = "adfilter.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adfilter"]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET", "PL", "PT"]
ignore = ["PLR0913", "PLR2004", "PLR0912", "PLR0915", "E501"]
