[project]
name = "adfilter"
version = "0.4.0"
description = "Ad filter rule aggregator & converter — 12 output formats, plugin system, allowlist, notifications"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Lknife666" }]
keywords = ["adblock", "dns", "filter", "hosts", "clash", "surge", "singbox", "adguard"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking :: Firewalls",
]
dependencies = [
    "aiohttp>=3.10",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.9",
    "mmh3>=5.0",
    "aiodns>=3.2",
]

[project.optional-dependencies]
notify = ["aiohttp>=3.10"]  # notifications use aiohttp (already a core dep, explicit for clarity)
all = ["adfilter[notify]"]

[project.urls]
Homepage = "https://github.com/Lknife666/adfilter"
Repository = "https://github.com/Lknife666/adfilter"
Issues = "https://github.com/Lknife666/adfilter/issues"
Changelog = "https://github.com/Lknife666/adfilter/blob/main/CHANGELOG.md"

[project.scripts]
adfilter = "adfilter.cli:app"

[project.entry-points."adfilter.handlers"]
[project.entry-points."adfilter.handlers"]
# Third-party handler plugins register here. Example:
# my_format = "my_package.handler:MyHandler"

[project.entry-points."adfilter.notifiers"]
# Third-party notifier plugins register here. Example:
# slack = "my_package.notifier:SlackNotifier"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adfilter"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["adfilter"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET", "PL", "PT"]
ignore = ["PLR0913", "PLR2004", "PLR0912", "PLR0915", "PLR0911", "E501",
          "PLC0415",  # lazy imports inside CLI commands are intentional
          "E702",     # we use `;` for compact column definitions in CLI output
          "SIM105"]   # try/except/pass is clearer than contextlib.suppress in hot paths

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert usage in tests is fine
